# crazyflie-clients-python

./: .cproject  .flake8  .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .travis.yml  2025_2.txt  CMakeLists.txt  CONTRIBUTING.md  CREDITS.txt  LICENSE.txt  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  appveyor.yml  gitversion.py  hi  icon-256.icns  module.json  package.xml  pyproject.toml  setup.py  setup_linux.sh  version.json
.github/workflows/: CI.yml  CI_experiment.yml  build.yml  ci.yml  log-param-docs.yml  mac.yml  nightly.yml  python-publish.yml  test-python-publish.yml
Sam/: simulink_test.py
cfclient/: cfclient.py  plottest.py
cfclient/configs/input/: Generic_OS_X.json  PS3_Mode_1.json  PS3_Mode_2.json
cfclient/configs/log/: battery.json  imu_acc.json  imu_gyro.json  mem_and_toc.json  memlogtest.json  stabalizer.json
cfclient/ui/: __init__.py  config.json  connectionDialogue.ui  connectiondialogue.py  inputconfigdialogue.py  logconfigdialogue.py  main.py  main.ui  pluginhelper.py  tab.py
cfclient/ui/tabs/: ConsoleTab.py  FlightTab.py  FlightTab.py.orig  LogTab.py  ParamTab.py  PlotTab.py  RegulationTab.py  ServiceTab.py  __init__.py  consoleTab.ui  flightTab.ui  logTab.ui  plotTab.ui  regulationTab.ui  serviceTab.ui
cfclient/ui/toolboxes/: ConsoleToolbox.py  CrtpSharkToolbox.py  DebugDriverToolbox.py  __init__.py  consoleToolbox.ui
cfclient/ui/widgets/: __init__.py  ai.py  plotwidget.py  rtplotwidget.py
cfclient/utils/: __init__.py  config.py  input.py  logconfigreader.py  pygamereader.py
cfclient/utils/joystick/: __init__.py  jevent.py  linuxjsdev.py  pygamejoystick.py
cfconfig/: configblock.py
cflib/: __init__.py
cflib/bootloader/: __init__.py  cloader.py
cflib/crazyflie/: __init__.py  commander.py  console.py  log.py  param.py  toc.py
cflib/crtp/: __init__.py  crtpdriver.py  crtpstack.py  debugdriver.py  exceptions.py  radiodriver.py  serialdriver.py  udpdriver.py
cflib/drivers/: __init__.py  crazyradio.py
cflib/utils/: __init__.py  callbacks.py
cfloader/: crazyload.py
conf/: config.dist
docs/: _config.yml  cfclient_zmq.md  cfheadless.md  cfloader.md  client.md  dev_info_client.md  index.md  inputdevices.md  macports.md  raspberrypi.md  run_from_source.md  userguide_client.md
docs/_data/: menu.yml
docs/development/: dev_info_client.md  index.md  zmq-server.md
docs/functional-areas/: cfclient_zmq.md  cfloader.md  client.md  index.md
docs/installation/: index.md  install.md  macports.md  run_from_source.md
docs/userguides/: cfheadless.md  index.md  inputdevices.md  raspberrypi.md  recovery-mode.md  userguide_client.md
docs/userguides/tabs/: console.md  index.md  loco.md  logblocks.md  parameters.md
docs/userguides/userguide_client/: colorled_tab.md  console_tab.md  crtpsniffer_tab.md  flightcontrol_tab.md  index.md  ledring_tab.md  lighthouse_tab.md  loco_tab.md  logblocks_tab.md  logclient_tab.md  logtoc_tab.md  parameters_tab.md  plotter_tab.md  tuning_tab.md
examples/: basiclog.py  basicparam.py  flash-memory.py  multiramp.py  ramp.py  read-eeprom.py  read-ow.py  scan.py  write-eeprom.py  write-ow.py  zmqclientinput.py  zmqclientled.py  zmqclientparam.py  zmqsrvtest.py
examples/zmq_clients/ramp_c/: Makefile  ramp.c  readme.md
lib/: cfheadless.py  cfkinect.py  cfzmq.py
lib/cfclient/: __init__.py  cfclient.py  plottest.py
lib/cfclient/configs/: config.json
lib/cfclient/configs/input/: Joystick.json  PS3_Mode_1.json  PS3_Mode_3.json  PS4_Mode_1.json  PS4_Mode_1_windows.json  PS4_Mode_2.json  PS4_Mode_2_windows.json  PS4_shoulder_btns_yaw.json  xbox360_mode1.json  xbox360_mode1_linux.json
lib/cfclient/configs/log/: battery.json  imu_acc.json  stabilizer.json
lib/cfclient/ui/: __init__.py  connectiondialogue.py  inputconfigdialogue.py  logconfigdialogue.py  main.py  main.ui  pluginhelper.py  tab.py
lib/cfclient/ui/dialogs/: about.py  about.ui  bootloader.py  bootloader.ui  cf1config.py  cf1config.ui  cf2config.py  cf2config.ui  connectiondialogue.py  connectiondialogue.ui  (+4 more)
lib/cfclient/utils/: __init__.py  config.py  config_manager.py  guiconfig.py  input.py  input_manager.py  inputreaderinterface.py  leapreader.py  logconfigreader.py  logdatawriter.py  periodictimer.py  pygamereader.py  pysdl2reader.py  singleton.py  zmq_led_driver.py  zmq_param.py
lib/cfconfig/: Makefile  configblock.py
lib/cflib/bootloader/: __init__.py  boottypes.py  cloader.py
lib/cflib/cache/: 9E5F2E7D.json
lib/cflib/crazyflie/: __init__.py  commander.py  console.py  log.py  mem.py  param.py  platformservice.py  toc.py  toccache.py
lib/cflib/crtp/: __init__.py  crtpdriver.py  crtpstack.py  debugdriver.py  exceptions.py  radiodriver.py  serialdriver.py  udpdriver.py  usbdriver.py
lib/cflib/drivers/: cfusb.py  crazyradio.py
lib/cflib/utils/: callbacks.py
lib/cfloader/: crazyload.py
lib/kinect/: __init__.py  kinect.py  pid.py
lib/leapmotion/: Leap.py  __init__.py
lib/leapsdk/: __init__.py
snap/: snapcraft.yaml
snap/gui/: cfclient.desktop
src/: cfheadless.py  cfzmq.py
src/cfclient/: SimpleExample.py  __init__.py  gui.py  headless.py  version.py
src/cfclient/configs/: config.json
src/cfclient/multicopter_sim/: __init__.py
src/cfclient/resources/: log_param_doc.json  map.html  map.js
src/cfclient/ui/: __init__.py  connectivity_manager.py  main.py  main.ui  pluginhelper.py  pose_logger.py  supervisor_logger.py  tab.py  tab_toolbox.py
src/cfclient/utils/: __init__.py  callbacks.py  config.py  config_manager.py  logconfigreader.py  logdatawriter.py  periodictimer.py  singleton.py  themes.py  ui.py  zmq_led_driver.py  zmq_param.py
src/cfclient/webots/: __init__.py
src/cfconfig/: Makefile  configblock.py
src/cflib/bootloader/: __init__.py
src/cflib/cache/: 27A2C4BA.json  81204C68.json
src/cflib/crazyflie/: toc.py  toccache.py
src/cflib/crtp/: debugdriver.py
src/cfloader/: __init__.py  __main__.py
src/cfzmq/: __init__.py  __main__.py
src/leapsdk/: __init__.py
test/: conftest.py  test_tabs.py
win32install/: cfclient.nsi.tmpl  generate_nsis.py  readme.txt
(+254 files in other folders)
